// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pages/Task Inbox Loaded Completed Tasks 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task Inbox Loaded With Tasks 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 001"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 002"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 003"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 004"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_ARCHIVED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={true}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6 (archived)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task Inbox Loading 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task Inbox Loading Error 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-face-sad"
    />
    <div
      className="title-message"
    >
      Oh no!
    </div>
    <div
      className="subtitle-message"
    >
      Server is down.  Please re-try later.
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List Default 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 001"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 002"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 003"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 004"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 005"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 006"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List Empty 1`] = `
<div
  className="list-items"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-check"
    />
    <div
      className="title-message"
    >
      You have no tasks
    </div>
    <div
      className="subtitle-message"
    >
      Sit back and relax
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List Loading 1`] = `
<div
  className="list-items"
>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List With All Task Types 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_PINNED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 5 (pinned)"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 001"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 002"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 003"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 004"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_ARCHIVED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={true}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6 (archived)"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List With Archived Tasks 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 001"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 002"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 003"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 004"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 005"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_ARCHIVED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={true}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6 (archived)"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List With Pinned Tasks 1`] = `
<div
  className="list-items"
>
  <div
    className="list-item TASK_PINNED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6 (pinned)"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 001"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 002"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 003"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 004"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 005"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Empty Screen Default 1`] = `
<div
  className="list-items"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-check"
    />
    <div
      className="title-message"
    >
      You have no tasks
    </div>
    <div
      className="subtitle-message"
    >
      Sit back and relax
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Loading Rows Default 1`] = `
<div
  className="list-items"
>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
  <div
    className="loading-item"
  >
    <span
      className="glow-checkbox"
    />
    <span
      className="glow-text"
    >
      <span>
        Loading
      </span>
       
      <span>
        cool
      </span>
       
      <span>
        state
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Loading Rows/Loading Row Default 1`] = `
<div
  className="loading-item"
>
  <span
    className="glow-checkbox"
  />
  <span
    className="glow-text"
  >
    <span>
      Loading
    </span>
     
    <span>
      cool
    </span>
     
    <span>
      state
    </span>
  </span>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Pages/Task-Inbox/Task List/Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;
